src/index.css
@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');

body {
  font-family: 'Raleway', sans-serif;
  font-weight: 200;
  text-align: center;
  max-width: 800px;
  margin: 0 auto;
  background-color: white;
}

.link {
  /* text-decoration-line: none; */
  font-weight: bold;
  color: #314763;
}

